Open space for the thumbnail immediately. This avoids having the page jump around when the thumbnail finally arrives.

--- a/client/beam.css
+++ b/client/beam.css
@@ -61,4 +61,6 @@ div.logo {
 }
 a.thumbnail {
     padding-left: 10px;
+    width: 154px;
+    height: 115px;
 }
